# Figures-OOP-Design-Patterns

./: CMakeLists.txt  main.cpp
application/: Application.cpp  Application.hpp
factory/: FigureFactory.hpp
factory/abstract_factory/: AbstractFactory.cpp  AbstractFactory.hpp
factory/random_figure_factory/: RandomFigureFactory.cpp  RandomFigureFactory.hpp
factory/stream_figure_factory/: StreamFigureFactory.cpp  StreamFigureFactory.hpp
figure/: Figure.cpp  Figure.hpp
figure/circle/: Circle.cpp  Circle.hpp
figure/rectangle/: Rectangle.cpp  Rectangle.hpp
figure/triangle/: Triangle.cpp  Triangle.hpp
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp  Application.hpp
src/factory/: FigureFactory.hpp
src/factory/abstract_factory/: AbstractFactory.cpp  AbstractFactory.hpp
src/factory/random_figure_factory/: RandomFigureFactory.cpp  RandomFigureFactory.hpp
src/factory/stream_figure_factory/: StreamFigureFactory.cpp  StreamFigureFactory.hpp
src/figure/: Figure.cpp  Figure.hpp
src/figure/circle/: Circle.cpp  Circle.hpp
src/figure/rectangle/: Rectangle.cpp  Rectangle.hpp
src/figure/triangle/: Triangle.cpp  Triangle.hpp
src/util/: Clonable.hpp  StringConvertible.hpp
src/util/figure_util/: FigureUtil.cpp  FigureUtil.hpp
src/util/string_to_figure/: StringToFigure.cpp  StringToFigure.hpp
tests/: CMakeLists.txt
tests/factory/: AbstractFactoryTests.cpp  RandomFigureFactoryTests.cpp  StreamFactoryTests.cpp  StreamFigureFactoryTests.cpp
tests/figure/: CircleTests.cpp  RectangleTests.cpp  TriangleTests.cpp
tests/util/: FigureUtilTests.cpp  StringConvertibleTests.cpp  StringToFigureTests.cpp
util/: Clonable.hpp  StringConvertible.hpp
util/figure_util/: FigureUtil.cpp  FigureUtil.hpp
util/string_to_figure/: StringToFigure.cpp  StringToFigure.hpp
